[gd_scene load_steps=16 format=2]

[ext_resource path="res://intro/picture/semi-mastery badges.png" type="Texture" id=1]
[ext_resource path="res://intro/picture/arrow.png" type="Texture" id=2]
[ext_resource path="res://intro/picture/MASTERY-badge.png" type="Texture" id=3]
[ext_resource path="res://intro/picture/normal-badge-gray.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://intro/script/badges.gd" type="Script" id=6]
[ext_resource path="res://intro/picture/arrow-pressed.png" type="Texture" id=7]
[ext_resource path="res://intro/picture/close.png" type="Texture" id=8]
[ext_resource path="res://intro/picture/normal badge.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 9
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 9
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 9
font_data = ExtResource( 5 )

[node name="badges" type="Node"]
script = ExtResource( 6 )

[node name="Panel4" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel3" type="Panel" parent="Panel4"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel4/Panel3"]
margin_left = 176.0
margin_top = 27.0
margin_right = 299.0
margin_bottom = 163.0

[node name="TextureRect" type="TextureRect" parent="Panel4/Panel3/VBoxContainer"]
margin_right = 123.0
margin_bottom = 136.0
texture = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel4/Panel3"]
margin_right = 320.0
margin_bottom = 22.0
alignment = 1

[node name="Label" type="Label" parent="Panel4/Panel3/HBoxContainer"]
margin_left = 117.0
margin_top = 5.0
margin_right = 202.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.956863, 0.901961, 0.0196078, 1 )
custom_fonts/font = SubResource( 5 )
text = "Chapter 3: OOP"
align = 1

[node name="Badges" type="VBoxContainer" parent="Panel4/Panel3"]
margin_left = 35.0
margin_top = 34.0
margin_right = 186.0
margin_bottom = 73.0
custom_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="Panel4/Panel3/Badges"]
margin_right = 151.0
margin_bottom = 11.0

[node name="Units" type="Label" parent="Panel4/Panel3/Badges/HBoxContainer"]
margin_right = 26.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 6 )
text = "Unit 1"

[node name="1" type="TextureRect" parent="Panel4/Panel3/Badges/HBoxContainer/Units"]
margin_left = 2.0
margin_top = 15.0
margin_right = 22.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="2" type="TextureRect" parent="Panel4/Panel3/Badges/HBoxContainer/Units"]
margin_left = 65.0
margin_top = 15.0
margin_right = 85.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="3" type="TextureRect" parent="Panel4/Panel3/Badges/HBoxContainer/Units"]
margin_left = 44.0
margin_top = 15.0
margin_right = 64.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="4" type="TextureRect" parent="Panel4/Panel3/Badges/HBoxContainer/Units"]
margin_left = 23.0
margin_top = 15.0
margin_right = 43.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="5" type="TextureRect" parent="Panel4/Panel3/Badges/HBoxContainer/Units"]
margin_left = 87.0
margin_top = 11.0
margin_right = 112.0
margin_bottom = 36.0
texture = ExtResource( 1 )

[node name="previous_button-3" type="TextureButton" parent="Panel4/Panel3"]
margin_left = 1.0
margin_top = 67.0
margin_right = 21.0
margin_bottom = 107.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 7 )
flip_h = true

[node name="close-3" type="TextureButton" parent="Panel4/Panel3"]
margin_left = 301.0
margin_top = 6.0
margin_right = 314.0
margin_bottom = 18.0
texture_normal = ExtResource( 8 )

[node name="Panel2" type="Panel" parent="Panel4"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -126, -13 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel4/Panel2"]
margin_left = 176.0
margin_top = 27.0
margin_right = 299.0
margin_bottom = 163.0

[node name="TextureRect" type="TextureRect" parent="Panel4/Panel2/VBoxContainer"]
margin_right = 123.0
margin_bottom = 136.0
texture = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel4/Panel2"]
margin_right = 320.0
margin_bottom = 22.0
alignment = 1

[node name="Label" type="Label" parent="Panel4/Panel2/HBoxContainer"]
margin_left = 103.0
margin_top = 5.0
margin_right = 216.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.956863, 0.901961, 0.0196078, 1 )
custom_fonts/font = SubResource( 3 )
text = "Chapter 2: Classes"
align = 1

[node name="Badges" type="VBoxContainer" parent="Panel4/Panel2"]
margin_left = 36.0
margin_top = 35.0
margin_right = 187.0
margin_bottom = 74.0
custom_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="Panel4/Panel2/Badges"]
margin_right = 151.0
margin_bottom = 11.0

[node name="Units" type="Label" parent="Panel4/Panel2/Badges/HBoxContainer"]
margin_right = 26.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 4 )
text = "Unit 1"

[node name="1" type="TextureRect" parent="Panel4/Panel2/Badges/HBoxContainer/Units"]
margin_left = 2.0
margin_top = 15.0
margin_right = 22.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="2" type="TextureRect" parent="Panel4/Panel2/Badges/HBoxContainer/Units"]
margin_left = 65.0
margin_top = 15.0
margin_right = 85.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="3" type="TextureRect" parent="Panel4/Panel2/Badges/HBoxContainer/Units"]
margin_left = 44.0
margin_top = 15.0
margin_right = 64.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="4" type="TextureRect" parent="Panel4/Panel2/Badges/HBoxContainer/Units"]
margin_left = 23.0
margin_top = 15.0
margin_right = 43.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="5" type="TextureRect" parent="Panel4/Panel2/Badges/HBoxContainer/Units"]
margin_left = 87.0
margin_top = 11.0
margin_right = 112.0
margin_bottom = 36.0
texture = ExtResource( 1 )

[node name="next_button-2" type="TextureButton" parent="Panel4/Panel2"]
margin_left = 300.0
margin_top = 69.0
margin_right = 320.0
margin_bottom = 109.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 7 )

[node name="previous_button-2" type="TextureButton" parent="Panel4/Panel2"]
margin_left = 1.0
margin_top = 67.0
margin_right = 21.0
margin_bottom = 107.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 7 )
flip_h = true

[node name="close-2" type="TextureButton" parent="Panel4/Panel2"]
margin_left = 301.0
margin_top = 7.0
margin_right = 315.0
margin_bottom = 17.0
texture_normal = ExtResource( 8 )

[node name="Panel" type="Panel" parent="Panel4"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel4/Panel"]
margin_left = 176.0
margin_top = 27.0
margin_right = 299.0
margin_bottom = 163.0

[node name="TextureRect" type="TextureRect" parent="Panel4/Panel/VBoxContainer"]
margin_right = 123.0
margin_bottom = 136.0
texture = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel4/Panel"]
margin_right = 320.0
margin_bottom = 22.0
alignment = 1

[node name="Label" type="Label" parent="Panel4/Panel/HBoxContainer"]
margin_left = 118.0
margin_top = 5.0
margin_right = 202.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.956863, 0.901961, 0.0196078, 1 )
custom_fonts/font = SubResource( 1 )
text = "Chapter 1: List"
align = 1

[node name="Badges" type="VBoxContainer" parent="Panel4/Panel"]
margin_left = 11.0
margin_top = 19.0
margin_right = 162.0
margin_bottom = 180.0
custom_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="Panel4/Panel/Badges"]
margin_right = 151.0
margin_bottom = 11.0

[node name="Units" type="Label" parent="Panel4/Panel/Badges/HBoxContainer"]
margin_right = 26.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 2 )
text = "Unit 1"

[node name="b1" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer/Units"]
visible = false
margin_left = 2.0
margin_top = 16.0
margin_right = 22.0
margin_bottom = 36.0
texture = ExtResource( 9 )

[node name="s1" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer/Units"]
margin_left = 1.0
margin_top = 15.0
margin_right = 21.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="b2" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer/Units"]
visible = false
margin_left = 24.0
margin_top = 16.0
margin_right = 44.0
margin_bottom = 36.0
texture = ExtResource( 9 )

[node name="s2" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer/Units"]
margin_left = 23.0
margin_top = 15.0
margin_right = 43.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="s3" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer/Units"]
margin_left = 44.0
margin_top = 15.0
margin_right = 64.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="s4" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer/Units"]
margin_left = 65.0
margin_top = 15.0
margin_right = 85.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="s5" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer/Units"]
margin_left = 87.0
margin_top = 11.0
margin_right = 112.0
margin_bottom = 36.0
texture = ExtResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel4/Panel/Badges"]
margin_top = 41.0
margin_right = 151.0
margin_bottom = 52.0

[node name="Units" type="Label" parent="Panel4/Panel/Badges/HBoxContainer2"]
margin_right = 28.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 2 )
text = "Unit 2"

[node name="1" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer2/Units"]
margin_left = 2.0
margin_top = 15.0
margin_right = 22.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="2" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer2/Units"]
margin_left = 65.0
margin_top = 15.0
margin_right = 85.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="3" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer2/Units"]
margin_left = 44.0
margin_top = 15.0
margin_right = 64.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="4" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer2/Units"]
margin_left = 23.0
margin_top = 15.0
margin_right = 43.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="5" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer2/Units"]
margin_left = 87.0
margin_top = 11.0
margin_right = 112.0
margin_bottom = 36.0
texture = ExtResource( 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel4/Panel/Badges"]
margin_top = 82.0
margin_right = 151.0
margin_bottom = 93.0

[node name="Units" type="Label" parent="Panel4/Panel/Badges/HBoxContainer3"]
margin_right = 29.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 2 )
text = "Unit 3"

[node name="1" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer3/Units"]
margin_left = 2.0
margin_top = 15.0
margin_right = 22.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="2" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer3/Units"]
margin_left = 65.0
margin_top = 15.0
margin_right = 85.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="3" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer3/Units"]
margin_left = 44.0
margin_top = 15.0
margin_right = 64.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="4" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer3/Units"]
margin_left = 23.0
margin_top = 15.0
margin_right = 43.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="5" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer3/Units"]
margin_left = 87.0
margin_top = 11.0
margin_right = 112.0
margin_bottom = 36.0
texture = ExtResource( 1 )

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel4/Panel/Badges"]
margin_top = 123.0
margin_right = 151.0
margin_bottom = 134.0

[node name="Units" type="Label" parent="Panel4/Panel/Badges/HBoxContainer4"]
margin_right = 28.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 2 )
text = "Unit 4"

[node name="1" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer4/Units"]
margin_left = 2.0
margin_top = 15.0
margin_right = 22.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="2" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer4/Units"]
margin_left = 65.0
margin_top = 15.0
margin_right = 85.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="3" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer4/Units"]
margin_left = 44.0
margin_top = 15.0
margin_right = 64.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="4" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer4/Units"]
margin_left = 23.0
margin_top = 15.0
margin_right = 43.0
margin_bottom = 35.0
texture = ExtResource( 4 )

[node name="5" type="TextureRect" parent="Panel4/Panel/Badges/HBoxContainer4/Units"]
margin_left = 87.0
margin_top = 11.0
margin_right = 112.0
margin_bottom = 36.0
texture = ExtResource( 1 )

[node name="next_button" type="TextureButton" parent="Panel4/Panel"]
margin_left = 300.0
margin_top = 69.0
margin_right = 320.0
margin_bottom = 109.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 7 )

[node name="close_button" type="TextureButton" parent="Panel4/Panel"]
margin_left = 300.0
margin_top = 6.0
margin_right = 315.0
margin_bottom = 20.0
texture_normal = ExtResource( 8 )

[connection signal="pressed" from="Panel4/Panel3/previous_button-3" to="." method="_on_previous_button3_pressed"]
[connection signal="pressed" from="Panel4/Panel3/close-3" to="." method="_on_close3_pressed"]
[connection signal="pressed" from="Panel4/Panel2/next_button-2" to="." method="_on_next_button2_pressed"]
[connection signal="pressed" from="Panel4/Panel2/previous_button-2" to="." method="_on_previous_button2_pressed"]
[connection signal="pressed" from="Panel4/Panel2/close-2" to="." method="_on_close2_pressed"]
[connection signal="pressed" from="Panel4/Panel/next_button" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Panel4/Panel/close_button" to="." method="_on_close_button_pressed"]
